# QtLearning

QtLearning/: CMakeLists.txt
QtLearning/src/: dialog.cpp  dialog.h  logo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  profilebox.cpp  profilebox.h  profileline.cpp  profileline.h  qtlearning.qrc  xmlreader.cpp  xmlreader.h
